--- a/index.html
+++ b/index.html
@@ -4,8 +4,51 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="./script.js" type="module"></script>
 </head>
 <body>
-  
+
+  <main class="windows">
+    <section>
+      <div>
+        <span>Nombre de partie gagné </span><span class="nb_partie_win">0</span>
+      </div>
+      <div>
+        <span>Nombre de partie </span><span class="nb_partie">1</span>
+      </div>
+    </section>
+    <h1>Faite Votre choix !</h1>
+    <h2>Player VS Robot</h2>
+    <section>
+      <div class="player_choice">🪨</div>
+      <div class="player_robot">📄</div>
+    </section>
+
+    <section >
+      <button class="rock">
+        <span>🪨</span>
+        <span>
+          Pierre
+        </span>
+      </button>
+      <button class="paper">
+        <span>📄</span>
+        <span>
+          Papier
+        </span>
+      </button>
+      <button class="scissors">
+        <span>✂️</span>
+        <span>
+          Pierre
+        </span>
+      </button> 
+    </section>
+    <section>
+      <h2>Result</h2>
+      <div class="result_value">Your loose !</div>
+    </section>
+  </main>
 </body>
 </html>
